# wirecage

./: .dockerignore  .gitignore  ASYNC_ANALYSIS.md  COMMIT-MESSAGE.txt  Cargo.toml  DEBUG.md  Dockerfile  MIGRATION.md  PLAN.md  README-RUST.md  README.md  RUST-REWRITE-SUMMARY.md  build-static.sh  build.sh  fly.toml  integration-test.sh  test.sh  test2.sh  wgcage.go  wgproxy.go  x
.github/workflows/: ci.yml  docker-ghcr.yml
cmd/wirecage/: main.go
cmd/wirecagesrv/: main.go
docs/: client-server-status.md
src/: args.rs  client_config.rs  main.rs  namespace.rs  network.rs  network_new.rs  overlay.rs  server.rs  server_args.rs  server_peer.rs  wireguard.rs
src/srv/: api.rs  dataplane.rs  flow.rs  main.rs  mod.rs  state.rs  wg.rs
testdata/: README.md  client-private.key  client-public.key  run-test.sh  server-private.key  server-public.key  test-commands.sh
tests/qemu/: README.md  common.sh  run-tests.sh  test_e2e_nat.sh
