[package]
name = "wirecage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wirecage"
path = "src/main.rs"

[[bin]]
name = "wirecagesrv"
path = "src/srv/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.29", features = ["user", "mount", "sched", "process", "net"] }
libc = "0.2"
base64 = "0.22"
gotatun = "0.1"
tun = { version = "0.6", features = ["async"] }
rtnetlink = "0.14"
netlink-packet-route = "0.20"
futures = "0.3"
bytes = "1.9"
ipnet = "2.10"
tempfile = "3.13"
smoltcp = { version = "0.11", features = ["std", "async", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp", "socket-icmp"] }
ctrlc = "3.4"
zerocopy = "0.8.31"
axum = { version = "0.8", features = ["json"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
parking_lot = "0.12"
dashmap = "5.5"
tower-http = { version = "0.5", features = ["limit", "cors"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
